# mega-project

./: .gitignore
desktop_app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
desktop_app/database/: init.sql  migrations.sql
desktop_app/database/pgvector/: build.bat
desktop_app/desktop/backend/: Cargo.toml  tauri.conf.json
desktop_app/desktop/backend/src/: lib.rs  main.rs
desktop_app/desktop/backend/src/commands/: activities.rs  ai.rs  auth.rs  chat.rs  community.rs  mod.rs
desktop_app/desktop/backend/src/db/: activities.rs  auth.rs  chat.rs  community.rs  mod.rs  pool.rs
desktop_app/desktop/frontend/: package-lock.json
desktop_app/middleware/src/: encryption.rs
desktop_app/modules/: __init__.py  ai_chat.py  ai_planner.py  analytics_engine.py  command_handler.py  command_parser.py  conversation_context.py  dashboard.py  focus_tracker.py  motivation_engine.py  notification_system.py  productivity_tracker.py  reflection_workflow.py  safety_filter.py  tts.py
desktop_app/nav backend/: README.md
desktop_app/nav backend/client/: client.py
desktop_app/nav backend/server/: Cargo.toml
desktop_app/nav backend/server/src/: filter.rs  logging.rs  main.rs  mood_engine.rs  ollama_http.rs
desktop_app/neuromate/: .gitignore  README.md
desktop_app/neuromate/client/: client.py  noise_cancel.py  requirements.txt  stt_server.py  tortoise_api.py
desktop_app/neuromate/database/: migrations.sql
desktop_app/neuromate/desktop/backend/: Cargo.toml  tauri.conf.json
desktop_app/neuromate/desktop/backend/src/: lib.rs  state.rs
desktop_app/neuromate/desktop/backend/src/commands/: ai.rs  auth.rs  community.rs  mod.rs  window.rs
desktop_app/neuromate/desktop/backend/src/db/: auth.rs  chat.rs  community.rs  mod.rs  pool.rs
desktop_app/neuromate/middleware/: Cargo.toml
desktop_app/server/: Cargo.toml
desktop_app/server/src/: main.rs  memory.rs
desktop_app/src/: App.tsx  index.css  main.tsx
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/capabilities/: avatar-float.json  default.json
desktop_app/src-tauri/src/: lib.rs
desktop_app/src/components/: ErrorBoundary.tsx
desktop_app/src/constants/: live2d.ts
desktop_app/src/hooks/: useTauri.ts
desktop_app/src/lib/: cn.ts  formatters.ts  utils.ts
desktop_app/src/pages/: AvatarFloat.tsx  Community.tsx  Dashboard.tsx  Home.tsx  KillSwitch.tsx  Productivity.tsx  Settings.tsx
website/: README.md
website/backend/: db.js  instrument.js  package-lock.json  package.json  server.js
website/database/: schema.sql
website/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
(+119 files in other folders)
