[package]
name = "neuromate"
version = "0.1.0"
description = "NeuroMate - AI Companion Desktop App"
authors = ["NeuroMate Team"]
edition = "2021"
default-run = "neuromate"

[lib]
name = "neuromate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-native-tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13.3", features = ["json"] }
bcrypt = "0.16"
