[package]
name = "monika-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
chrono = "0.4"
once_cell = "1.18"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"